test/tests/operators/throttle/invalid_rate.txt
error: `rate` must be a positive value
 --> tests/operators/throttle/invalid_rate.tql:6:15
  |
6 | throttle rate=0
  |               ^ 
  |
